# cpp_monad

./: CMakeLists.txt  main.cpp
monad/: either.h  left.h  right.h
test/: create_class_test.cpp  either_test.cpp  left_test.cpp  main_test.cpp  right_test.cpp
test/helpers/: help_class.h
